k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskcal-ingress
  namespace: default
spec:
  rules:
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /api/task
            pathType: Prefix
            backend:
              service:
                name: task-service
                port:
                  number: 80
          - path: /api/password-recovery
            pathType: Prefix
            backend:
              service:
                name: password-service
                port:
                  number: 80
          - path: /api/notification
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 80
